<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rgPort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp" >

        <RadioButton
            android:id="@+id/rbBluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/bluetooth"
            android:textSize="15sp"></RadioButton>

        <RadioButton
            android:id="@+id/rbUsb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/usb"
            android:textSize="15sp"></RadioButton>

        <RadioButton
            android:id="@+id/rbEthernet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ethernet"
            android:textSize="15sp"></RadioButton>
    </RadioGroup>

    <TextView
        android:id="@+id/tvPortInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10sp"
        android:singleLine="false"
        android:textSize="15sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/llEthernet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_address" />

        <EditText
            android:id="@+id/etIpAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:text="@string/default_ip_address" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port_number" />

        <EditText
            android:id="@+id/etPortNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/default_port_number" />
    </LinearLayout>

    <Button
        android:id="@+id/btOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5sp"
        android:background="@drawable/button_style"
        android:gravity="center"
        android:onClick="okButtonClicked"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/ok"
        android:visibility="gone" />
</LinearLayout>
